@@ -5,6 +5,7 @@ nymea-plugins-modbus (1.7.008) buster focal jammy; urgency=medium
   * Azzurro: set states to 0 when not connected. Added outlier detection to energy counters.
   * New plugin: Solax inverter
   * Amperfied Energy Control: code improvement & bugfixes.
+  * Webasto ev-charger: removed Live, added Next and Unite.
 
  -- Luis Reber <l.reber@consolinno.de> Fri, 26 Apr 2024 09:50:00 +0200
 
